Issue #29392: Prevent crash when passing invalid arguments into msvcrt module.